# beamer

./: .gitignore  Cargo.toml  README.md
crates/template/: Cargo.toml  LICENSE
